--- a/style.css
+++ b/style.css
@@ -1,54 +1,209 @@
-*{
-    margin:0;
+* {
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-#sliders{
-    width:70%;
+
+#sliders {
+    width: 70%;
     height: 500px;
-    border:1px solid black;
-    margin:auto;
-    margin-top:20px;
+    border: 1px solid black;
+    margin: auto;
+    margin-top: 20px;
     position: relative;
     overflow: hidden;
 }
-#sliders img{
-    width:100%;
+
+#sliders img {
+    width: 100%;
+
 }
-.slide{
-    width:100%;
-    width:100%;
+
+.slide {
+    width: 100%;
+    width: 100%;
     position: absolute;
+    transition: all 1s ease;
 }
-#pre-btn, #next-btn{
+
+#pre-btn,
+#next-btn {
     position: absolute;
-    padding:10px;
+    padding: 10px;
     border-radius: 5px;
-    z-index: 1; 
-    top:50%;
+    z-index: 1;
+    top: 50%;
     background-color: rgb(226, 219, 219);
     opacity: 0.6;
     cursor: pointer;
 }
-#pre-btn{
-    right:15px;
+
+#pre-btn {
+    left: 15px;
 }
-#next-btn{
-    left:15px;
+
+#next-btn {
+    right: 15px;
 }
+
 .arrow {
     border: solid black;
     border-width: 0 3px 3px 0;
     display: inline-block;
     padding: 3px;
- }
-  
-  .right {
-    transform: rotate(-45deg);
-    -webkit-transform: rotate(-45deg);
-  }
-  
-  .left {
-    transform: rotate(135deg);
-    -webkit-transform: rotate(135deg);
-  }
+}
+
+.bullet-points {
+    position: absolute;
+    bottom: 0;
+    left: 45%;
+    z-index: 2;
+}
+
+.bullet-points .bullet {
+    display: inline-block;
+    height: 8px;
+    width: 8px;
+    border-radius: 50%;
+    margin: 0px 2px;
+    background-color: #fff;
+    cursor: pointer;
+    transition: all 0.6s ease;
+}
+
+.bullet-points .bullet.active,
+.bullet-points .bullet:hover {
+    background-color: rgb(67, 67, 67);
+}
+
+@media screen and (min-width:320px) {
+    #sliders {
+        height: 126px;
+    }
+
+    .bullet-points {
+        left: 17%;
+    }
+
+    #pre-btn,
+    #next-btn {
+        padding: 6px;
+        top: 40%;
+    }
+
+    #pre-btn {
+        left: 6px;
+    }
+
+    #next-btn {
+        right: 6px;
+    }
+}
+
+@media screen and (min-width:375px) {
+    .bullet-points {
+        left: 23%;
+    }
+}
+
+@media screen and (min-width:425px) {
+    .bullet-points {
+        left: 28%;
+    }
+
+    #sliders {
+        height: 168px;
+    }
+}
+
+@media screen and (min-width:768px) {
+    #sliders {
+        height: 303px;
+    }
+
+    .bullet-points {
+        left: 40%;
+    }
+
+    #pre-btn,
+    #next-btn {
+        padding: 10px;
+    }
+
+    #pre-btn {
+        left: 10px;
+    }
+
+    #next-btn {
+        right: 10px;
+    }
+}
+
+@media screen and (min-width:1024px) {
+    #sliders {
+        height: 400px;
+    }
+
+    .bullet-points .bullet {
+        height: 11px;
+        width: 11px;
+    }
+}
+
+@media screen and (min-width:1440px) {
+    #sliders {
+        height: 500px;
+    }
+
+    .bullet-points {
+        left: 45%;
+        bottom: 10px;
+    }
+
+    #pre-btn,
+    #next-btn {
+        padding: 10px;
+        top: 50%;
+    }
+
+    #pre-btn {
+        left: 15px;
+    }
+
+    #next-btn {
+        right: 15px;
+    }
+}
+
+@media screen and (min-width:2560px) {
+    #sliders {
+        height: 850px;
+    }
+
+    .bullet-points {
+        left: 45%;
+        bottom: 20px;
+        display: flex;
+        gap: 13px;
+    }
+
+    .bullet-points .bullet {
+        height: 18px;
+        width: 18px;
+    }
+
+    #pre-btn,
+    #next-btn {
+        padding: 15px;
+        top: 50%;
+        font-size: 2rem;
+    }
+
+    #pre-btn {
+        left: 20px;
+    }
+
+    #next-btn {
+        right: 20px;
+    }
+}
