--- a/style.css
+++ b/style.css
@@ -3,13 +3,17 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+body{
+    height:100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 #sliders {
     width: 70%;
     height: 500px;
     border: 1px solid black;
     margin: auto;
-    margin-top: 20px;
     position: relative;
     overflow: hidden;
 }
@@ -57,6 +61,7 @@
     bottom: 0;
     left: 45%;
     z-index: 2;
+    display: flex;
 }
 
 .bullet-points .bullet {
@@ -77,10 +82,12 @@
 @media screen and (min-width:320px) {
     #sliders {
         height: 126px;
+        width:80%;
     }
 
     .bullet-points {
-        left: 17%;
+        left: 25%;
+        margin-bottom:5px;
     }
 
     #pre-btn,
@@ -96,17 +103,21 @@
     #next-btn {
         right: 6px;
     }
+    .bullet-points .bullet{
+        height:7px;
+        width:7px;
+    }
 }
 
 @media screen and (min-width:375px) {
     .bullet-points {
-        left: 23%;
+        left: 30%;
     }
 }
 
 @media screen and (min-width:425px) {
     .bullet-points {
-        left: 28%;
+        left: 32%;
     }
 
     #sliders {
@@ -117,6 +128,7 @@
 @media screen and (min-width:768px) {
     #sliders {
         height: 303px;
+        width:70%;
     }
 
     .bullet-points {
@@ -141,7 +153,9 @@
     #sliders {
         height: 400px;
     }
-
+      .bullet-points{
+        gap:6px;
+      }
     .bullet-points .bullet {
         height: 11px;
         width: 11px;
