--- a/style.css
+++ b/style.css
@@ -21,7 +21,10 @@ body {
 }
 
 #sliders img {
+    top: 0;
+    left: 0;
     width: 100%;
+    height: 100%;
 
 }
 
@@ -29,6 +32,10 @@ body {
     width: 100%;
     width: 100%;
     position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    object-fit: cover;
     transition: all 1s ease-out;
 }
 
